--- a/.cproject
+++ b/.cproject
@@ -27,6 +27,7 @@
 								<option id="de.innot.avreclipse.assembler.option.debug.level.1590769156" name="Generate Debugging Info" superClass="de.innot.avreclipse.assembler.option.debug.level" useByScannerDiscovery="false" value="de.innot.avreclipse.assembler.option.debug.level.none" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.asm.option.include.paths.1079071894" name="#include paths for preprocessor(-I)" superClass="de.innot.avreclipse.asm.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/avr_utilities}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ws2811_controller}&quot;"/>
 								</option>
 								<inputType id="de.innot.avreclipse.tool.assembler.input.800792275" superClass="de.innot.avreclipse.tool.assembler.input"/>
 							</tool>
@@ -35,6 +36,7 @@
 								<option id="de.innot.avreclipse.compiler.option.optimize.2005383674" name="Optimization Level" superClass="de.innot.avreclipse.compiler.option.optimize" useByScannerDiscovery="false" value="de.innot.avreclipse.compiler.optimize.size" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.compiler.option.incpath.681324287" name="Include Paths (-I)" superClass="de.innot.avreclipse.compiler.option.incpath" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/avr_utilities}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ws2811_controller}&quot;"/>
 								</option>
 								<inputType id="de.innot.avreclipse.compiler.winavr.input.1948213364" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
 							</tool>
@@ -43,6 +45,7 @@
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.747606324" name="Optimization Level" superClass="de.innot.avreclipse.cppcompiler.option.optimize" useByScannerDiscovery="false" value="de.innot.avreclipse.cppcompiler.optimize.size" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.cppcompiler.option.incpath.1580345399" name="Include Paths (-I)" superClass="de.innot.avreclipse.cppcompiler.option.incpath" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/avr_utilities}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/ws2811_controller}&quot;"/>
 								</option>
 								<option id="de.innot.avreclipse.cppcompiler.option.otherflags.558237596" name="Other flags" superClass="de.innot.avreclipse.cppcompiler.option.otherflags" useByScannerDiscovery="false" value="-std=c++11" valueType="string"/>
 								<inputType id="de.innot.avreclipse.cppcompiler.input.1662002352" superClass="de.innot.avreclipse.cppcompiler.input"/>
